--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
-.about-container {
+#about {
   margin-left: 1.5rem;
   font-family: "Montserrat", sans-serif;
   /* font-weight: 700; */
@@ -13,10 +13,23 @@
 }
 .about-text p {
   text-align: left;
-}
+  font-size: .9rem;
+  padding-left: .2rem;
+padding-right: .2rem;
 
+}
+.first h1 p{
+   font-size: .8rem;
+   padding-left: .2rem;
+padding-right: .2rem;
+}
+.second h1 p{
+   font-size: .8rem;
+   padding-left: .2rem;
+padding-right: .2rem;
+}
 @media (min-width: 500px) {
-  .about-container {
+  #about {
     /* margin-left: 1.5rem; */
     display: flex;
      margin-top: 2.5rem;
@@ -41,5 +54,9 @@
   }
   .about-text h1 {
   font-size: 2rem;
+}
+.about-text p {
+  text-align: left;
+  font-size: 1rem;
 }
 }
